sumo/tests/sumo/extended/emitter/errors/vtypedist/negative_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: Attribute 'probability' for vtype 'KRAUSS_DEFAULT2' is negative (must not).
Quitting (on error).
